--- a/pcom-playwright-react/package.json
+++ b/pcom-playwright-react/package.json
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.32.1",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
