Adds pcom for commit quality and Kiosk

--- a/pcom-playwright-react/package.json
+++ b/pcom-playwright-react/package.json
@@ -26,7 +26,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "plop": "plop"
+    "plop": "plop",
+    "tests": "npx playwright test --project=kiosk" 
   },
   "eslintConfig": {
     "extends": [
