updating code to use test ids
restructuring components to match medallion hierarchy

--- a/pcom-playwright-react/package.json
+++ b/pcom-playwright-react/package.json
@@ -27,7 +27,9 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "plop": "plop",
-    "tests": "npx playwright test --project=kiosk" 
+    "tests": "npx playwright test --project=kiosk", 
+    "tests-debug": "npx playwright test --project=kiosk --debug",
+    "tests-headed": "npx playwright test --project=kiosk --headed" 
   },
   "eslintConfig": {
     "extends": [
