Adds tests for store login start of welcome page

--- a/pcom-playwright-react/.env
+++ b/pcom-playwright-react/.env
@@ -1,2 +1,2 @@
-    domain=http://localhost:3000
-    //domain=https://abg-kiosk-develop.vercel.app/
+    //domain=http://localhost:3000
+    domain=https://abg-kiosk-develop.vercel.app/
